--- a/noticia.css
+++ b/noticia.css
@@ -25,8 +25,9 @@ body {
 
 
 header {
-    background: linear-gradient(90deg, #FF8000, #ffb84d);
+    background: none;
 }
+
 
 
 main.container {
@@ -92,3 +93,7 @@ footer p {
     font-family: 'Poppins', sans-serif;
     margin: 0 auto;
 }
+
+
+
+
